| Summary: | ASTERISK-25312: res_http_websocket: Terminate connection on fatal cases | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-08-11 05:24:14 | Date Closed: | 2015-08-12 13:44:15 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_http_websocket |
| Versions: | 11.19.0 13.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The res_http_websocket module will currently attempt to close the WebSocket connection if fatal cases occur, such as when attempting to write out data and being unable to. When the fatal cases occur the code attempts to write a WebSocket close frame out to have the remote side close the connection. If writing this fails then the connection is not terminated.
If the WebSocket close frame is not able to be sent the connection should be forcefully terminated. | ||
| Comments: | |||